// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variants 01. v([]) 1`] = `
Object {
  "_": "function () { return false; }",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`variants 02. v([pureFunc]) 1`] = `
Object {
  "_": "function validator(value) {
  return typeof value === 'number' && value % 2 === 0
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`variants 03. v([pureFunc, is3k]) 1`] = `
Object {
  "_": "function validator(value) {
  validator.explanations = []
  if (typeof value === 'number' && value % 2 === 0) return true;
  if (typeof value === 'number' && value % 3 === 0) return true;
  validator.explanations.push(value)
  return false
}",
  "explanations": Array [],
  "pure": false,
}
`;

exports[`variants 04. v([pureFunc, pureFunc]) 1`] = `
Object {
  "_": "function validator(value) {
  if (typeof value === 'number' && value % 2 === 0) return true;
  if (typeof value === 'number' && value % 2 === 0) return true;
  return false
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`variants 05. v([1,2,3,4,5]) 1`] = `
Object {
  "_": "function validator(value) {
  if (value === 1) return true;
  if (value === 2) return true;
  if (value === 3) return true;
  if (value === 4) return true;
  if (value === 5) return true;
  return false
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`variants 06. v(["A", "B", Symbol.for("test")]) 1`] = `
Object {
  "_": "function validator(value) {
  if (validator.__validValuesDict[value] === true) return true
  return false
}",
  "__validValuesDict": Object {
    "A": true,
    "B": true,
    Symbol(variant): true,
  },
  "explanations": Array [],
  "pure": true,
}
`;

exports[`variants 07. v(["A", "B", 1,2,3, isEven]) 1`] = `
Object {
  "_": "function validator(value) {
  if (validator.__validValuesDict[value] === true) return true
  if (value === 1) return true;
  if (value === 2) return true;
  if (value === 3) return true;
  if (typeof value === 'number' && value % 2 === 0) return true;
  return false
}",
  "__validValuesDict": Object {
    "A": true,
    "B": true,
  },
  "explanations": Array [],
  "pure": true,
}
`;
